fixed last file names and fixed jumpy text on front page

--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -36,7 +36,6 @@ section h1 {
 	position: absolute;
 	color: #fff;
 	font-size: 16em;
-	transform: translate(0, -20%);
 	text-shadow: 5px 5px black;
 }
 
@@ -120,10 +119,10 @@ section h1::selection { background: transparent; }
 @keyframes schmove {
 	0% {
 	  opacity:0;
-	  transform: translateY(-300px);
+	  transform: translateY(-350px);
 	}
 	100% {
 	  opacity:1;
-	  transform: translateY(normal);
+	  transform: translateY(-100px);
 	}
 }
